Footer fixed vertical alignment issue

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -230,6 +230,7 @@
   .footer {
     grid-row: 6;
     grid-column: 1 / 4;
+    display: grid;
 
     background: #489C93;
     color: white;
